--- a/Lab_1/code_v2.ipynb
+++ b/Lab_1/code_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "id": "b62f6f8e",
    "metadata": {},
    "outputs": [],
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "99eac2cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_data_path = \"./data/tcs_stock.csv\""
+    "source_data_path = \"./../tcs_stock.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "id": "499e9e21",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "25bbb87f",
    "metadata": {},
    "outputs": [
@@ -327,14 +327,12 @@
        "[248 rows x 15 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# For this Lab we choose records with Party = PS and territoryName = Porto \n",
-    "# full_df = row_df[(row_df['Party'] == 'PS') & (row_df['territoryName'] == 'Porto')]\n",
     "full_df = row_df\n",
     "full_df"
    ]
@@ -346,12 +344,7 @@
    "source": [
     "## Step 1. Choose subsample with main variables for your further analysis. \n",
     "\n",
-    "###  For this lab you need subsample with 3-5 random variables, at least half of them should be described with continuous random variable type\n",
-    "\n",
-    "numParishesApproved (numeric): Number of parishes approved in this location   \n",
-    "votersPercentage (numeric): Percentage of voters   \n",
-    "blankVotesPercentage (numeric): Percentage of blank votes   \n",
-    "validVotesPercentage (numeric): Percentage of valid votes in a party   "
+    "###  For this lab you need subsample with 3-5 random variables, at least half of them should be described with continuous random variable type"
    ]
   },
   {
@@ -2260,26 +2253,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "id": "9cd74459",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result for Open\n",
-      "kstest: p-value =  1.4527107738687808e-08\n",
-      "cramervonmises: p-value =  8.567850873220095e-10\n",
-      "Result for High\n",
-      "kstest: p-value =  5.367561046762377e-17\n",
-      "cramervonmises: p-value =  7.122014089588902e-11\n",
-      "Result for Low\n",
-      "kstest: p-value =  0.4962830863565647\n",
-      "cramervonmises: p-value =  0.5120218278609918\n",
-      "Result for Close\n",
-      "kstest: p-value =  1.236970815340803e-05\n",
-      "cramervonmises: p-value =  2.37003721959006e-06\n"
+     "ename": "NameError",
+     "evalue": "name 'st' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_6892/3551270769.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Open'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'High'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Low'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Close'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaplace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhypsecant\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaplace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaplace\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'st' is not defined"
      ]
     }
    ],
@@ -2293,22 +2279,7 @@
     "\n",
     "    print(\"Result for\", col)\n",
     "    print(\"kstest: p-value = \", st.kstest(data, l1.cdf).pvalue)\n",
-    "    print(\"cramervonmises: p-value = \", st.cramervonmises(data, l1.cdf).pvalue)\n",
-    "\n",
-    "#     st.chisquare(data, l1.cdf)\n",
-    "# print(t.pvalue)\n",
-    "# t\n",
-    "# for col, dst in list(zip(columns, dist)):    \n",
-    "#     print(col)\n",
-    "#     print(dst)\n",
-    "#     print('-----')\n",
-    "#     print('{} variable - {}'.format(col, dst))\n",
-    "    \n",
-    "    \n",
-    "            \n",
-    "#     print('kstest p-value: ', )\n",
-    "#     print('chi2 p-value: ', df['{}_chi2'.format(col)][0])\n",
-    "#     print()"
+    "    print(\"cramervonmises: p-value = \", st.cramervonmises(data, l1.cdf).pvalue)"
    ]
   }
  ],
