--- a/Lab_2/code.ipynb
+++ b/Lab_2/code.ipynb
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "785dd39b",
+   "id": "69d8effc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5fa8eb35",
+   "id": "dcdb104d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0240f967",
+   "id": "8148b842",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
    "id": "0d6506ba",
    "metadata": {},
    "source": [
-    "Use PCA method"
+    "Use PCA method and see how many variables we need to take for regression."
    ]
   },
   {
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a6b530fc",
+   "id": "3c8c57c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7a93f6da",
+   "id": "c79b7362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437e6247",
+   "id": "600a3100",
    "metadata": {},
    "source": [
     "R^2 show a good quality of our model as a qqplot"
@@ -971,9 +971,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d08ac65",
+   "metadata": {},
+   "source": [
+    "Residuals are not distributed normally."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6c264c02",
+   "id": "05a95210",
    "metadata": {},
    "outputs": [
     {
@@ -991,6 +999,35 @@
     "mod = sm.OLS(train_target, train_feature)\n",
     "res = mod.fit()\n",
     "print(res.conf_int(0.01))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "09388061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    248.000000\n",
+       "mean       0.380230\n",
+       "std       12.471677\n",
+       "min      -24.312439\n",
+       "25%       -8.113857\n",
+       "50%       -0.971024\n",
+       "75%        6.655066\n",
+       "max       54.325712\n",
+       "Name: High, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "residuals.describe()"
    ]
   }
  ],
