--- a/Lab_1/code.ipynb
+++ b/Lab_1/code.ipynb
@@ -634,7 +634,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:13<00:00,  6.18it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:10<00:00,  8.05it/s]\n"
      ]
     },
     {
@@ -660,7 +660,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:13<00:00,  6.49it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:11<00:00,  7.71it/s]\n"
      ]
     },
     {
@@ -686,7 +686,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:13<00:00,  6.19it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:11<00:00,  7.65it/s]\n"
      ]
     },
     {
@@ -712,7 +712,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:11<00:00,  7.58it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████| 86/86 [00:10<00:00,  7.92it/s]\n"
      ]
     },
     {
@@ -757,193 +757,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 100,
+   "id": "9a1cd544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def estimate_params(data, var, distribution):\n",
+    "    return list(getattr(st, distribution).fit(data[var]))\n",
+    "\n",
+    "def estimate_params_ls(data, var, distribution, bins=90):\n",
+    "    min_val, max_val = data[var].min(), data[var].max()\n",
+    "    dists, _edges = np.histogram(data[var], bins=bins, density=True)\n",
+    "    xs = np.linspace(min_val, max_val, num=bins)\n",
+    "    def f(xdata, loc, scale):\n",
+    "        return getattr(st.distributions, distribution).pdf(xdata, loc=loc, scale=scale)\n",
+    "    \n",
+    "    p, _ = scipy.optimize.curve_fit(f, xs, dists, \n",
+    "                                    p0=estimate_params(data, var, distribution),\n",
+    "                                    maxfev=2000)\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "id": "4059b105",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "leastsq() got an unexpected keyword argument 'disp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/y1/0xfcbwy53bsd0708_4_bv7nw0000gn/T/ipykernel_70924/1313587653.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mhigh_MLE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhypsecant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'High'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'MLE'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mhigh_MM\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhypsecant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'High'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'MLE'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mls_new\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mlow_MLE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlaplace\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Low'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'MLE'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/stats/_distn_infrastructure.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, data, *args, **kwds)\u001b[0m\n\u001b[1;32m   2494\u001b[0m         \u001b[0;31m# especially when the user fixes parameters. Minimizing the sum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2495\u001b[0m         \u001b[0;31m# of squares of the error generalizes to these cases.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2496\u001b[0;31m         \u001b[0mvals\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2497\u001b[0m         \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2498\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: leastsq() got an unexpected keyword argument 'disp'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Open parameters using MLE: [2548.5, 66.47842741935482]\n",
+      "\n",
+      "Open parameters using LS: [2552.26134837   73.26727496]\n",
+      "\n",
+      "High parameters using MLE: [2566.1139624858956, 59.51842636604291]\n",
+      "\n",
+      "High parameters using LS: [2569.02210113   59.84409266]\n",
+      "\n",
+      "Low parameters using MLE: [2520.0, 64.04838709677419]\n",
+      "\n",
+      "Low parameters using LS: [2522.22531967   75.0366586 ]\n",
+      "\n",
+      "Close parameters using MLE: [2541.4750000000004, 66.76834677419355]\n",
+      "\n",
+      "Close parameters using LS: [2544.97725667   75.88376731]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from scipy.stats import laplace, hypsecant\n",
-    "from scipy.optimize import leastsq as ls_new\n",
+    "var_check = {'Open': 'laplace', 'High': 'hypsecant', 'Low': 'laplace', 'Close': 'laplace'}\n",
     "\n",
-    "def optimizer(func, x0, args, disp):\n",
-    "    return ls(func, x0, args)\n",
-    "    \n",
-    "\n",
-    "open_MLE = laplace.fit(df['Open'], method='MLE')\n",
-    "open_MM = laplace.fit(df['Open'], method='MLE', optimizer = ls)\n",
-    "\n",
-    "high_MLE = hypsecant.fit(df['High'], method='MLE')\n",
-    "high_MM = hypsecant.fit(df['High'], method='MLE', optimizer = ls_new)\n",
-    "\n",
-    "low_MLE = laplace.fit(df['Low'], method='MLE')\n",
-    "low_MM = laplace.fit(df['Low'], method='MLE', optimizer = ls)\n",
-    "\n",
-    "close_MLE = laplace.fit(df['Close'], method='MLE')\n",
-    "close_MM = laplace.fit(df['Close'], method='MLE', optimizer = ls)\n",
-    "\n",
-    "print('Open')\n",
-    "print(f'MLE: {open_MLE}\\nMM: {open_MM}', end='\\n\\n')\n",
-    "\n",
-    "print('High')\n",
-    "print(f'MLE: {high_MLE}\\nMM: {high_MM}', end='\\n\\n')\n",
-    "\n",
-    "print('Low')\n",
-    "print(f'MLE: {low_MLE}\\nMM: {low_MM}', end='\\n\\n')\n",
-    "\n",
-    "print('Close')\n",
-    "print(f'MLE: {close_MLE}\\nMM: {close_MM}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "90fa43bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = laplace.fit(df['Open'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "8190fe86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.optimize import least_squares as ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "9b5ce318",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'rv_frozen' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/y1/0xfcbwy53bsd0708_4_bv7nw0000gn/T/ipykernel_70924/3401258632.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlaplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Open'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/optimize/_lsq/least_squares.py\u001b[0m in \u001b[0;36mleast_squares\u001b[0;34m(fun, x0, jac, bounds, method, ftol, xtol, gtol, x_scale, loss, f_scale, diff_step, tr_solver, tr_options, jac_sparsity, max_nfev, verbose, args, kwargs)\u001b[0m\n\u001b[1;32m    818\u001b[0m         \u001b[0mx0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_strictly_feasible\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    819\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 820\u001b[0;31m     \u001b[0mf0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfun_wrapped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    821\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    822\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mf0\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/scipy/optimize/_lsq/least_squares.py\u001b[0m in \u001b[0;36mfun_wrapped\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    813\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    814\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfun_wrapped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 815\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matleast_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    816\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    817\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'trf'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'rv_frozen' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "ls(laplace(), df['Open'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "c385029f",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2548.5, 66.47842741935482)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "laplace.fit(df['Open'], optimizer = ls)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "1ce836d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.00569418, 0.00724364, 0.00461287, 0.00561761, 0.00230919,\n",
-       "       0.00152459, 0.00184275, 0.00468278, 0.00489895, 0.00461287,\n",
-       "       0.00595703, 0.00699732, 0.00623201, 0.00489895, 0.00504857,\n",
-       "       0.0046477 , 0.00447616, 0.00436643, 0.00379353, 0.00642235,\n",
-       "       0.0062602 , 0.00276601, 0.00432069, 0.00560917, 0.00489895,\n",
-       "       0.00702897, 0.00618532, 0.00421477, 0.00184414, 0.00267597,\n",
-       "       0.00230919, 0.00632647, 0.00434023, 0.0020168 , 0.00078415,\n",
-       "       0.00119128, 0.00084286, 0.00066257, 0.00105621, 0.00141732,\n",
-       "       0.00108847, 0.00104515, 0.00100961, 0.00020496, 0.00036301,\n",
-       "       0.00189903, 0.00166108, 0.00184275, 0.00241942, 0.00195703,\n",
-       "       0.00433045, 0.00450995, 0.00397163, 0.0049732 , 0.00368111,\n",
-       "       0.00272471, 0.0022073 , 0.00394484, 0.00699732, 0.00578048,\n",
-       "       0.00528162, 0.00548815, 0.00651969, 0.00651969, 0.00609756,\n",
-       "       0.00379353, 0.00142695, 0.0016711 , 0.00132356, 0.0015223 ,\n",
-       "       0.00231093, 0.00660856, 0.00268605, 0.00124253, 0.00129403,\n",
-       "       0.00237972, 0.00185109, 0.00359898, 0.00421477, 0.00285049,\n",
-       "       0.00268403, 0.00316701, 0.00368111, 0.004544  , 0.00213866,\n",
-       "       0.00632647, 0.00613897, 0.00632647, 0.00735343, 0.00489895,\n",
-       "       0.004544  , 0.0044829 , 0.00485493, 0.00489895, 0.00661851,\n",
-       "       0.00735343, 0.0025656 , 0.00321501, 0.00307315, 0.00326865,\n",
-       "       0.00268403, 0.00300685, 0.00272471, 0.00326374, 0.00268   ,\n",
-       "       0.0039094 , 0.0040288 , 0.0043435 , 0.00578048, 0.00319092,\n",
-       "       0.00528957, 0.00392708, 0.00362615, 0.0049732 , 0.004544  ,\n",
-       "       0.00613897, 0.00735343, 0.00346615, 0.00468278, 0.00613897,\n",
-       "       0.00733134, 0.00528162, 0.0043435 , 0.005966  , 0.00346615,\n",
-       "       0.00519885, 0.0046617 , 0.00211785, 0.0035747 , 0.0037369 ,\n",
-       "       0.00642235, 0.00250459, 0.00427865, 0.00368111, 0.00699732,\n",
-       "       0.00733134, 0.00595703, 0.0049732 , 0.00623201, 0.00471814,\n",
-       "       0.00349231, 0.00302727, 0.00359898, 0.00427865, 0.00461634,\n",
-       "       0.00311504, 0.00381643, 0.00424021, 0.00489895, 0.00586809,\n",
-       "       0.00520276, 0.00528162, 0.00482581, 0.00330822, 0.00120933,\n",
-       "       0.00195703, 0.00089379, 0.0006942 , 0.00036301, 0.00039136,\n",
-       "       0.00064293, 0.00192781, 0.0041581 , 0.00651479, 0.00277017,\n",
-       "       0.00302727, 0.0040288 , 0.00671882, 0.00635508, 0.00367557,\n",
-       "       0.00291993, 0.00702897, 0.0071355 , 0.00605187, 0.00682065,\n",
-       "       0.00729833, 0.00586809, 0.00717316, 0.00682065, 0.00586809,\n",
-       "       0.00735343, 0.00656891, 0.00607467, 0.00618532, 0.00379353,\n",
-       "       0.00445265, 0.00179622, 0.00351868, 0.00156879, 0.00052874,\n",
-       "       0.0008435 , 0.00120933, 0.00162158, 0.00151544, 0.00332319,\n",
-       "       0.00746488, 0.00311973, 0.00272062, 0.00311973, 0.00342726,\n",
-       "       0.00613897, 0.00746488, 0.00746488, 0.00569847, 0.00421794,\n",
-       "       0.00600652, 0.00362615, 0.00362615, 0.00552542, 0.0071355 ,\n",
-       "       0.00576312, 0.00321501, 0.00336342, 0.00241397, 0.00248957,\n",
-       "       0.00142802, 0.00069316, 0.00060085, 0.00068178, 0.0004784 ,\n",
-       "       0.00048675, 0.00087254, 0.0005968 , 0.00057781, 0.00036851,\n",
-       "       0.00047589, 0.00046109, 0.00057868, 0.00044141, 0.00032673,\n",
-       "       0.00029056, 0.00023967, 0.00031657, 0.00050541, 0.00062388,\n",
-       "       0.00030397, 0.00058261, 0.00063333, 0.00100961, 0.00108847,\n",
-       "       0.00108765, 0.00147053, 0.00100961, 0.00110497, 0.00122766,\n",
-       "       0.00193799, 0.00178948, 0.00102106])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "values"
+    "for var, distribution in var_check.items():\n",
+    "    print(f'{var} parameters using MLE: {estimate_params(df, var, distribution)}\\n')\n",
+    "    print(f'{var} parameters using LS: {estimate_params_ls(df, var, distribution)}\\n')"
    ]
   },
   {
