--- a/Lab_1/code.ipynb
+++ b/Lab_1/code.ipynb
@@ -1678,7 +1678,7 @@
    "id": "2fac02a1",
    "metadata": {},
    "source": [
-    "As we can see here p-value > 0.05 for all described features. Then we can say that theoretical distribution and real distribution of our data is quite similar."
+    "As we can see here p-value > 0.05 for all described features. Then we can say that at step 4 "
    ]
   }
  ],
