--- a/Lab_1/code.ipynb
+++ b/Lab_1/code.ipynb
@@ -1605,7 +1605,7 @@
    "id": "74880eb3",
    "metadata": {},
    "source": [
-    "In step 4 we assumed that all of our features have **Hyperbolic secant distribution** using SSE value. Now we will proof it using  statistical tests.\n",
+    "At step 4, we fitted the distributions for each of the features using the SSE value. Now we will proof it using  statistical tests.\n",
     "\n",
     "For it we define 2 lists\n"
    ]
@@ -1678,7 +1678,10 @@
    "id": "2fac02a1",
    "metadata": {},
    "source": [
-    "As we can see here p-value > 0.05 for all described features. Then we can say that at step 4 "
+    "In all cases, the p-value takes on rather high values. This means that at step 4 we have chosen the distributions well.  \n",
+    "For Open, Low, Close it is Laplace.  \n",
+    "For High it Hyperbolic secant distribution\n",
+    "\n"
    ]
   }
  ],
