--- a/Lab_2/code.ipynb
+++ b/Lab_2/code.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6ad77ccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec19d28a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "01c53123",
    "metadata": {
     "scrolled": false
    },
@@ -151,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "69d8effc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +157,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffb56c6d",
    "metadata": {},
    "source": [
     "## Step 1. You need to make a non-parametric estimation of PDF in form of histogram and using kernel density function for MRV (or probability law in case of discrete MRV)"
@@ -170,7 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "692779da",
    "metadata": {
     "scrolled": false
    },
@@ -258,7 +252,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d21e9a2",
    "metadata": {},
    "source": [
     "## Step 2. You need to make an estimation of multivariate mathematical expectation and variance."
@@ -267,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e038161",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +287,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4b397cb5",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +313,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d289b60f",
    "metadata": {},
    "source": [
     "## Step 3. You need to make a non-parametric estimation of conditional distributions, mathematical expectations and variances."
@@ -331,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b09d858e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +331,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "caedf0ef",
    "metadata": {
     "scrolled": false
    },
@@ -375,7 +363,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bdbbec45",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +390,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8d897fc5",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +416,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53d9ecfd",
    "metadata": {},
    "source": [
     "## Step 4. You need to make an estimation of pair correlation coefficients, confidence intervals for them and significance levels."
@@ -439,7 +424,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9c37b594",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +453,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dcdb104d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +470,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8148b842",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +534,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d605bac",
    "metadata": {},
    "source": [
     "## Step 5. Choose a task formulation for regression. Estimate multivariate correlation (target -predictors)."
@@ -560,7 +541,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c8ac4fc",
    "metadata": {},
    "source": [
     "Predict values of 'High' feature"
@@ -569,7 +549,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8167a92f",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +572,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6506ba",
    "metadata": {},
    "source": [
     "Use PCA method and see how many variables we need to take for regression."
@@ -602,7 +580,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a7adf852",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +591,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "561baee3",
    "metadata": {
     "scrolled": true
    },
@@ -725,7 +701,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a858f76f",
    "metadata": {
     "scrolled": true
    },
@@ -748,14 +723,13 @@
     "y = np.std(pca.transform(std_df), axis=0)**2\n",
     "x = np.arange(len(y)) + 1\n",
     "plt.plot(x, y, \"o-\")\n",
-    "plt.xticks(x, df.columns, rotation=60)\n",
+    "plt.xticks(x, [f\"Comp.{i}\" for df.columns, rotation=60)\n",
     "plt.ylabel(\"Variance\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f8ed19f",
    "metadata": {},
    "source": [
     "I think that 3 features is ok. Let's use Open, Close, Low"
@@ -763,7 +737,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26fc8db4",
    "metadata": {},
    "source": [
     "## Step 6. Build regression model and make an analysis of multicollinearity and regularization (if needed)."
@@ -772,7 +745,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7ef1a60d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +760,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "79341c44",
    "metadata": {
     "scrolled": true
    },
@@ -832,7 +803,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c52fabd6",
    "metadata": {},
    "source": [
     "## Step 7. Analyze the quality of regression model (distribution of residuals, determination coefficient)."
@@ -840,7 +810,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de8d88e",
    "metadata": {},
    "source": [
     "R^2 score can be find at the end of Step 6"
@@ -849,7 +818,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3c8c57c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +828,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c79b7362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +850,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a4600ed0",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +885,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600a3100",
    "metadata": {},
    "source": [
     "R^2 show a good quality of our model as a qqplot"
@@ -928,7 +893,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e4a035fb",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +916,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "120e2b8e",
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +935,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d08ac65",
    "metadata": {},
    "source": [
     "Residuals are not distributed normally."
@@ -981,7 +943,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "05a95210",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +965,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "09388061",
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
